[gd_scene load_steps=4 format=3 uid="uid://baumhp28csf0f"]

[ext_resource type="PackedScene" uid="uid://clyul6nuh52rm" path="res://Game/filter_toggle.tscn" id="1_7dq4n"]
[ext_resource type="Script" path="res://Game/screen_filters.gd" id="1_7pc1o"]
[ext_resource type="Texture2D" uid="uid://cfveb17qyderm" path="res://Art/icon_confirm.png" id="2_tqkps"]

[node name="screen_filters" type="CanvasLayer"]
script = ExtResource("1_7pc1o")

[node name="BG" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.133
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = 0.639999
offset_right = 540.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="cont_main" type="VBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="lbl_title" type="Label" parent="BG/MarginContainer/cont_main"]
layout_mode = 2
theme_type_variation = &"Label_Title"
text = "FILTERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_subtitle" type="Label" parent="BG/MarginContainer/cont_main"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"Label_Subtitle"
text = "Customize your deck"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="spacer4" type="Control" parent="BG/MarginContainer/cont_main"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="filter_toggle" parent="BG/MarginContainer/cont_main" instance=ExtResource("1_7dq4n")]
layout_mode = 2

[node name="spacer5" type="Control" parent="BG/MarginContainer/cont_main"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MarginContainer/cont_main"]
layout_mode = 2

[node name="spacer" type="Control" parent="BG/MarginContainer/cont_main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_exit" type="Button" parent="BG/MarginContainer/cont_main/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Button_Icon_BG"
icon = ExtResource("2_tqkps")

[node name="spacer2" type="Control" parent="BG/MarginContainer/cont_main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[connection signal="pressed" from="BG/MarginContainer/cont_main/HBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
